[project]
name = "github-issue-analyzer"
version = "0.1.0"
description = "Local GitHub issue clarification and estimation worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.3.6",
    "pydantic>=2.11.1",
    "pydantic-core>=2.33.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy>=2.0.39",
    "typer>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
github-issue-analyzer = "github_issue_analyzer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
